--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
         "sass-loader": "^6.0.6",
         "style-loader": "^0.19.1",
         "webpack": "^3.10.0"
-    }
+    },
+    "preferGlobal": true,
+    "bin": "./bin/rkcompile.js"
 }
