--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "url": "https://github.com/haidangdevhaui/rikkei-module-compiler/issues"
     },
     "homepage": "https://github.com/haidangdevhaui/rikkei-module-compiler#readme",
-    "dependencies": {
+    "devDependencies": {
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-minify-webpack-plugin": "^0.2.0",
