--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "node-sass": "^4.7.2",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.19.1",
+        "url-loader": "^0.6.2",
         "webpack": "^3.10.0"
     },
     "preferGlobal": true,
