--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "babel-minify-webpack-plugin": "^0.2.0",
         "css-loader": "^0.28.8",
         "extract-text-webpack-plugin": "^3.0.2",
+        "font-awesome-sass": "^4.7.0",
         "node-notifier": "^5.1.2",
         "node-sass": "^4.7.2",
         "sass-loader": "^6.0.6",
@@ -37,5 +38,14 @@
     "preferGlobal": true,
     "bin": {
         "rkcompile": "./bin/rkcompile.js"
+    },
+    "devDependencies": {
+        "clean-webpack-plugin": "^0.1.17",
+        "file-loader": "^1.1.6",
+        "img-loader": "^2.0.0",
+        "jquery": "^3.2.1",
+        "jquery-ui": "^1.12.1",
+        "resolve-url-loader": "^2.2.1",
+        "sw-precache-webpack-plugin": "^0.11.4"
     }
 }
